register and otp via email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.type-aliases-package=com.project.resto.dao
+
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mail.yahoo.com
+spring.mail.port=587
+spring.mail.username=k3v1n_99@yahoo.com
+spring.mail.password=b4r4t4ganteng99
+spring.mail.default.encoding=utf-8
+spring.mail.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.mail.yahoo.com
+spring.mail.properties.mail.smtp.ssl.protocols= TLSv1.2
+
+
